--- a/rootfs/etc/nginx/conf.d/archive.raspberrypi.com.conf
+++ b/rootfs/etc/nginx/conf.d/archive.raspberrypi.com.conf
@@ -1,5 +1,6 @@
 proxy_cache_path /var/lib/linux-repository/raspberrypi keys_zone=raspberrypi:10m levels=2:2 inactive=7d max_size=100g min_free=10g loader_files=64 loader_sleep=50ms loader_threshold=300ms use_temp_path=off;
 
+# The Raspberry Pi Repository
 server {
     listen 80;
     server_name archive.raspberrypi.com;
