--- a/rootfs/etc/nginx/conf.d/http.kali.org.conf
+++ b/rootfs/etc/nginx/conf.d/http.kali.org.conf
@@ -1,5 +1,6 @@
 proxy_cache_path /var/lib/linux-repository/kali keys_zone=kali:10m levels=2:2 inactive=7d max_size=100g min_free=10g loader_files=64 loader_sleep=50ms loader_threshold=300ms use_temp_path=off;
 
+# The Kali Linux Repository
 server {
     listen 80;
     server_name http.kali.org;
