--- a/rootfs/etc/nginx/conf.d/ports.ubuntu.com.conf
+++ b/rootfs/etc/nginx/conf.d/ports.ubuntu.com.conf
@@ -1,5 +1,7 @@
 proxy_cache_path /var/lib/linux-repository/ubuntu-ports keys_zone=ubuntuports:10m levels=2:2 inactive=7d max_size=100g min_free=10g loader_files=64 loader_sleep=50ms loader_threshold=300ms use_temp_path=off;
 
+# The PORT Architecture Ubuntu Repository
+# This repository is used to provide packages for the arm64, armhf, ppc64el, riscv64 and s390x architectures.
 server {
     listen 80;
     server_name ports.ubuntu.com;
