--- a/rootfs/etc/nginx/conf.d/security.ubuntu.com.conf
+++ b/rootfs/etc/nginx/conf.d/security.ubuntu.com.conf
@@ -1,5 +1,6 @@
 proxy_cache_path /var/lib/linux-repository/ubuntu-security keys_zone=ubuntusecurity:10m levels=2:2 inactive=7d max_size=100g min_free=10g loader_files=64 loader_sleep=50ms loader_threshold=300ms use_temp_path=off;
 
+# The Ubuntu Security Repository
 server {
     listen 80;
     server_name security.ubuntu.com;
