Move redundanct config to rootfs/etc/nginx/linux-repository/general.conf

--- a/rootfs/etc/nginx/linux-repository/general.conf
+++ b/rootfs/etc/nginx/linux-repository/general.conf
@@ -1,3 +1,6 @@
+access_log /var/log/nginx/access.log cachelog;
+error_log /var/log/nginx/error.log;
+
 # Cache configuration
 slice 1m;
 proxy_cache_key $http_host$uri$slice_range;
@@ -24,3 +27,8 @@ proxy_ignore_client_abort on;
 proxy_next_upstream error timeout http_404;
 proxy_redirect off;
 proxy_ssl_server_name on;
+
+# Status page
+location = /status {
+    stub_status;
+}
