--- a/rootfs/etc/nginx/conf.d/archive.ubuntu.com.conf
+++ b/rootfs/etc/nginx/conf.d/archive.ubuntu.com.conf
@@ -1,4 +1,4 @@
-proxy_cache_path /var/lib/linux-repository/ubuntu keys_zone=ubuntu:10m levels=2:2 inactive=3650d max_size=100g min_free=10g loader_files=64 loader_sleep=50ms loader_threshold=300ms use_temp_path=off;
+proxy_cache_path /var/lib/linux-repository/ubuntu keys_zone=ubuntu:10m levels=2:2 inactive=3650d loader_files=64 loader_sleep=50ms loader_threshold=300ms use_temp_path=off;
 
 # The Ubuntu Repository
 # This repository is used to provide packages for the amd64 and i386 architectures.
