--- a/rootfs/etc/nginx/conf.d/deb.debian.org.conf
+++ b/rootfs/etc/nginx/conf.d/deb.debian.org.conf
@@ -1,5 +1,5 @@
-proxy_cache_path /var/lib/linux-repository/debian           keys_zone=debian:10m          levels=2:2 inactive=3650d max_size=100g min_free=10g loader_files=64 loader_sleep=50ms loader_threshold=300ms use_temp_path=off;
-proxy_cache_path /var/lib/linux-repository/debian-security  keys_zone=debiansecurity:10m  levels=2:2 inactive=3650d max_size=100g min_free=10g loader_files=64 loader_sleep=50ms loader_threshold=300ms use_temp_path=off;
+proxy_cache_path /var/lib/linux-repository/debian           keys_zone=debian:10m          levels=2:2 inactive=3650d loader_files=64 loader_sleep=50ms loader_threshold=300ms use_temp_path=off;
+proxy_cache_path /var/lib/linux-repository/debian-security  keys_zone=debiansecurity:10m  levels=2:2 inactive=3650d loader_files=64 loader_sleep=50ms loader_threshold=300ms use_temp_path=off;
 
 # The Debian Repository
 server {
