--- a/rootfs/etc/nginx/templates/kali.org.conf.template
+++ b/rootfs/etc/nginx/templates/kali.org.conf.template
@@ -1,10 +1,18 @@
-proxy_cache_path /var/lib/linux-repository/kali keys_zone=kali:10m levels=2:2 inactive=3650d loader_files=64 loader_sleep=50ms loader_threshold=300ms use_temp_path=off;
-
 # The Kali Linux Repository
+
+proxy_cache_path /var/lib/linux-repository/kali 
+    keys_zone=kali:10m 
+    levels=2:2 
+    inactive=3650d 
+    loader_files=64 
+    loader_sleep=50ms 
+    loader_threshold=300ms 
+    use_temp_path=off;
+
 server {
     listen 80;
     server_name http.kali.org;
-    server_name http.kali.internal;
+    server_name http.kali.${DOMAIN};
     include /etc/nginx/linux-repository/general.conf;
 
     location /kali/ {
