--- a/rootfs/etc/nginx/templates/proxmox.com.conf.template
+++ b/rootfs/etc/nginx/templates/proxmox.com.conf.template
@@ -1,10 +1,18 @@
-proxy_cache_path /var/lib/linux-repository/proxmox keys_zone=proxmox:10m levels=2:2 inactive=3650d loader_files=64 loader_sleep=50ms loader_threshold=300ms use_temp_path=off;
-
 # Proxmox (non-enterprise)
+
+proxy_cache_path /var/lib/linux-repository/proxmox 
+    keys_zone=proxmox:10m 
+    levels=2:2 
+    inactive=3650d 
+    loader_files=64 
+    loader_sleep=50ms 
+    loader_threshold=300ms 
+    use_temp_path=off;
+
 server {
     listen 80;
     server_name download.proxmox.com;
-    server_name download.proxmox.internal;
+    server_name download.proxmox.${DOMAIN};
     include /etc/nginx/linux-repository/general.conf;
 
     location /debian/ {
