--- a/rootfs/etc/nginx/templates/raspberrypi.com.conf.template
+++ b/rootfs/etc/nginx/templates/raspberrypi.com.conf.template
@@ -1,10 +1,18 @@
-proxy_cache_path /var/lib/linux-repository/raspberrypi keys_zone=raspberrypi:10m levels=2:2 inactive=3650d loader_files=64 loader_sleep=50ms loader_threshold=300ms use_temp_path=off;
-
 # The Raspberry Pi Repository
+
+proxy_cache_path /var/lib/linux-repository/raspberrypi
+    keys_zone=raspberrypi:10m
+    levels=2:2
+    inactive=3650d
+    loader_files=64
+    loader_sleep=50ms
+    loader_threshold=300ms
+    use_temp_path=off;
+
 server {
     listen 80;
     server_name archive.raspberrypi.com;
-    server_name archive.raspberrypi.internal;
+    server_name archive.raspberrypi.${DOMAIN};
     include /etc/nginx/linux-repository/general.conf;
 
     location /debian/ {
