Add comments to rootfs/etc/nginx/conf.d/_nginx.conf

--- a/rootfs/etc/nginx/conf.d/_nginx.conf
+++ b/rootfs/etc/nginx/conf.d/_nginx.conf
@@ -9,9 +9,12 @@ log_format cachelog '$time_local [request]: $remote_addr - $remote_user "$reques
 # All other .deb files can be cached nearly indefinitely, as the
 # version number is coded into the file name.
 map $request_uri $nocache {
+    # Debian/Ubuntu standard paths
     ~InRelease 1;
     ~Release 1;
     ~Packages 1;
+
+    # Alpine Linux standard paths
     ~APKINDEX.tar.gz 1;
     ~MIRRORS.txt 1;
     ~last-updated 1;
