--- a/rootfs/etc/nginx/conf.d/_nginx.conf
+++ b/rootfs/etc/nginx/conf.d/_nginx.conf
@@ -2,7 +2,7 @@
 resolver 8.8.8.8 ipv6=off valid=30s;
 
 # Log with cache status
-log_format cachelog '$time_local [request]: $server_name - $remote_addr - $remote_user "$request" $status $body_bytes_sent "$http_referer" "$http_user_agent" "$upstream_cache_status"';
+log_format cachelog '$time_local [server]: $server_name - [request]: $remote_addr - $remote_user "$request" $status $body_bytes_sent "$http_referer" "$http_user_agent" "$upstream_cache_status"';
 
 # URI paths to avoid cache
 # These paths will change to indicate new release contents
