--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -7,5 +7,6 @@ services:
       - type: volume
         source: cache
         target: /var/cache/linux-packages
+    stop_grace_period: 5m
 volumes:
   cache:
