--- a/rootfs/etc/nginx/templates/alpine.conf.template
+++ b/rootfs/etc/nginx/templates/alpine.conf.template
@@ -10,7 +10,7 @@ proxy_cache_path /var/cache/linux-packages/alpine
     use_temp_path=off;
 
 server {
-    listen 80;
+    listen ${PORT};
     server_name dl-cdn.alpinelinux.org;
     server_name dl-cdn.alpinelinux.${DOMAIN};
     include /etc/nginx/linux-packages/general.conf;
