--- a/rootfs/etc/nginx/templates/kali.conf.template
+++ b/rootfs/etc/nginx/templates/kali.conf.template
@@ -10,7 +10,7 @@ proxy_cache_path /var/cache/linux-packages/kali
     use_temp_path=off;
 
 server {
-    listen 80;
+    listen ${PORT};
     server_name http.kali.org;
     server_name http.kali.${DOMAIN};
     include /etc/nginx/linux-packages/general.conf;
