--- a/rootfs/etc/nginx/templates/proxmox.conf.template
+++ b/rootfs/etc/nginx/templates/proxmox.conf.template
@@ -10,7 +10,7 @@ proxy_cache_path /var/cache/linux-packages/proxmox
     use_temp_path=off;
 
 server {
-    listen 80;
+    listen ${PORT};
     server_name download.proxmox.com;
     server_name download.proxmox.${DOMAIN};
     include /etc/nginx/linux-packages/general.conf;
