--- a/rootfs/etc/nginx/conf.d/default.conf
+++ b/rootfs/etc/nginx/conf.d/default.conf
@@ -1,7 +1,6 @@
 server {
-    listen ${PORT};
+    listen ${PORT} default_server;
     server_name _;
-    server_name localhost;
 
     location = /status {
         stub_status;
