--- a/rootfs/etc/nginx/linux-packages/general.conf
+++ b/rootfs/etc/nginx/linux-packages/general.conf
@@ -1,12 +1,16 @@
 access_log /var/log/nginx/access.log cachelog;
 error_log /var/log/nginx/error.log;
 
-# Cache configuration
+# Slice configuration
 slice 1m;
-proxy_cache_key $http_host$uri$slice_range;
+proxy_set_header Range $slice_range;
+
+# Cache configuration
+add_header X-Cache-Key $server_name$uri$slice_range;
+proxy_cache_key $server_name$uri$slice_range;
+proxy_cache_methods GET;
 proxy_cache_valid 200 206 7d;
 proxy_cache_valid 301 302 0;
-proxy_set_header Range $slice_range;
 proxy_cache_lock on;
 proxy_cache_lock_age 2m;
 proxy_cache_lock_timeout 1h;
