--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,9 @@ services:
     image: ghcr.io/cacheserver/linux-packages:main
     restart: always
     stop_grace_period: 5m
+    environment:
+      - DOMAIN=local
+      - PORT=80
     ports:
       - 80:80
     volumes:
