--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=https://raw.githubusercontent.com/swarmlibs/dockerstack-schema/main/schema/dockerstack-spec.json
 services:
   cacheserver:
     image: ghcr.io/cacheserver/linux-packages:main
