--- a/rootfs/etc/nginx/linux-packages/general.conf
+++ b/rootfs/etc/nginx/linux-packages/general.conf
@@ -1,3 +1,7 @@
+# DNS Resolver (with IPv6 disabled)
+resolver 8.8.8.8 ipv6=off;
+
+# Log with cache status
 access_log /var/log/nginx/access.log cachelog;
 error_log /var/log/nginx/error.log;
 
