Restructure rootfs/etc/nginx/linux-packages/general.conf -> rootfs/etc/nginx/cacheserver.d/cache.conf

--- a/rootfs/etc/nginx/templates/alpine.conf.template
+++ b/rootfs/etc/nginx/templates/alpine.conf.template
@@ -14,7 +14,7 @@ server {
     server_name dl-cdn.alpinelinux.org;
     server_name dl-cdn.alpinelinux.${DOMAIN};
 
-    include /etc/nginx/linux-packages/general.conf;
+    include cacheserver.d/cache.conf;
 
     location /alpine/ {
         proxy_cache alpine;
