--- a/rootfs/etc/nginx/templates/debian.conf.template
+++ b/rootfs/etc/nginx/templates/debian.conf.template
@@ -23,7 +23,7 @@ server {
     server_name deb.debian.org;
     server_name deb.debian.${DOMAIN};
 
-    include /etc/nginx/linux-packages/general.conf;
+    include cacheserver.d/cache.conf;
 
     location /debian/ {
         proxy_cache debian;
