--- a/rootfs/etc/nginx/templates/kali.conf.template
+++ b/rootfs/etc/nginx/templates/kali.conf.template
@@ -14,7 +14,7 @@ server {
     server_name http.kali.org;
     server_name http.kali.${DOMAIN};
 
-    include /etc/nginx/linux-packages/general.conf;
+    include cacheserver.d/cache.conf;
 
     location /kali/ {
         proxy_cache kali;
