Update environment variables

--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -3,7 +3,7 @@ services:
   cacheserver:
     image: ghcr.io/cacheserver/linux-packages:main
     environment:
-      - DOMAIN=local
+      - DOMAIN=localhost
       - PORT=80
     ports:
       - 80:80
