--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,16 @@
 services:
   cacheserver:
     image: ghcr.io/cacheserver/linux-packages:main
+    build:
+      context: .
+      dockerfile: Dockerfile
     restart: always
     stop_grace_period: 5m
     environment:
-      - DOMAIN=local
+      - DOMAIN=localhost
       - PORT=80
     ports:
-      - 80:80
+      - 8080:80
     volumes:
       - type: volume
         source: cache
