--- a/rootfs/etc/nginx/cacheserver.d/cache.conf
+++ b/rootfs/etc/nginx/cacheserver.d/cache.conf
@@ -15,7 +15,7 @@ proxy_cache_valid 200 206 7d;
 proxy_cache_valid 301 302 0;
 proxy_cache_lock on;
 proxy_cache_lock_age 2m;
-proxy_cache_lock_timeout 1h;
+proxy_cache_lock_timeout 15m;
 proxy_cache_use_stale error timeout invalid_header updating http_500 http_502 http_503 http_504;
 proxy_cache_revalidate on;
 
