--- a/rootfs/etc/nginx/templates/proxmox.conf.template
+++ b/rootfs/etc/nginx/templates/proxmox.conf.template
@@ -14,7 +14,7 @@ server {
     server_name download.proxmox.com;
     server_name download.proxmox.${DOMAIN};
 
-    include cacheserver.d/cache.conf;
+    include conf.d/cacheserver.d/cache.conf;
 
     location /debian/ {
         proxy_cache proxmox;
