--- a/rootfs/etc/nginx/templates/ubuntu.conf.template
+++ b/rootfs/etc/nginx/templates/ubuntu.conf.template
@@ -14,7 +14,7 @@ server {
     server_name archive.ubuntu.com;
     server_name archive.ubuntu.${DOMAIN};
 
-    include cacheserver.d/cache.conf;
+    include conf.d/cacheserver.d/cache.conf;
 
     location /ubuntu/ {
         proxy_cache ubuntu;
@@ -40,7 +40,7 @@ server {
     server_name ports.ubuntu.com;
     server_name ports.ubuntu.${DOMAIN};
 
-    include cacheserver.d/cache.conf;
+    include conf.d/cacheserver.d/cache.conf;
 
     location /ubuntu-ports/ {
         proxy_cache ubuntuports;
@@ -65,7 +65,7 @@ server {
     server_name security.ubuntu.com;
     server_name security.ubuntu.${DOMAIN};
 
-    include cacheserver.d/cache.conf;
+    include conf.d/cacheserver.d/cache.conf;
 
     location /ubuntu/ {
         proxy_cache ubuntusecurity;
